--- a/web-app/public/index.html
+++ b/web-app/public/index.html
@@ -134,7 +134,7 @@
             </div>
           </div>
         </div>
-        <div class="divider-short" style="margin-top:0px"></div>
+        <!-- <div class="divider-short" style="margin-top:0px"></div> -->
         <div class="row">
             <div class="text-center">
                 <button type="submit" id="evaluate-another" title="Evaluate" class="btn btn-success wow btn-lg ub-button">Evaluate another student</button>
@@ -149,8 +149,8 @@
     <section id="form" class="home-section paddingtop-100">
       <div class="container">
         <div class="row">
-          <div class="col-md-12">
-            <div class="callaction">
+          <div class="col-md-8 col-md-offset-2">
+            <div class="">
               <div class="row text-center">
                 <div class="col-md-12 col-lg-12">
                   <div class="wow fadeInUp" data-wow-delay="0.1s">
@@ -172,7 +172,7 @@
                               <div class="validation"></div>
                             </div>
                           </div>
-                          <div class="text-center"><button type="submit" title="Send Message" class="btn btn-lg ub-button">Submit</button></div>
+                          <div class="text-center"><button type="submit" title="Send Message" class="btn btn-lg ub-button btn-success wow">Submit</button></div>
                       </form>
                   </div>
               </div>
